[gd_scene load_steps=5 format=2]

[ext_resource path="res://Main.gd" type="Script" id=1]
[ext_resource path="res://buttongroup.tres" type="ButtonGroup" id=2]
[ext_resource path="res://Fonts/NotoSansBold36.tres" type="DynamicFont" id=4]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0, 0.6, 0.6, 1 )

[node name="Main" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="PanelContainer" type="PanelContainer" parent="VBoxContainer"]
margin_right = 1680.0
margin_bottom = 70.0
rect_min_size = Vector2( 0, 70 )

[node name="Header" type="RichTextLabel" parent="VBoxContainer/PanelContainer"]
margin_left = 7.0
margin_top = 7.0
margin_right = 1673.0
margin_bottom = 63.0
size_flags_horizontal = 3
custom_fonts/normal_font = ExtResource( 4 )
bbcode_enabled = true
bbcode_text = "[center][color=red]Z  E  B  R  A     P  U  Z  Z  L  E"
text = "Z  E  B  R  A     P  U  Z  Z  L  E"

[node name="PanelContainer1" type="PanelContainer" parent="VBoxContainer"]
margin_top = 74.0
margin_right = 1680.0
margin_bottom = 932.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_styles/panel = SubResource( 1 )

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/PanelContainer1"]
margin_right = 1680.0
margin_bottom = 858.0

[node name="Label" type="Label" parent="VBoxContainer/PanelContainer1/HBoxContainer"]
margin_right = 586.0
margin_bottom = 858.0
size_flags_horizontal = 3
size_flags_vertical = 7

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/PanelContainer1/HBoxContainer"]
margin_left = 590.0
margin_right = 1090.0
margin_bottom = 858.0
rect_min_size = Vector2( 500, 0 )

[node name="Label" type="Label" parent="VBoxContainer/PanelContainer1/HBoxContainer/VBoxContainer"]
margin_right = 500.0
margin_bottom = 214.0
size_flags_horizontal = 3
size_flags_vertical = 7

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/PanelContainer1/HBoxContainer/VBoxContainer"]
margin_top = 218.0
margin_right = 500.0
margin_bottom = 432.0
size_flags_vertical = 3

[node name="Panel" type="Panel" parent="VBoxContainer/PanelContainer1/HBoxContainer/VBoxContainer/VBoxContainer"]
margin_right = 500.0
margin_bottom = 214.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/PanelContainer1/HBoxContainer/VBoxContainer/VBoxContainer/Panel"]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="Header 2" type="RichTextLabel" parent="VBoxContainer/PanelContainer1/HBoxContainer/VBoxContainer/VBoxContainer/Panel/VBoxContainer"]
margin_right = 500.0
margin_bottom = 60.0
rect_min_size = Vector2( 0, 60 )
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/normal_font = ExtResource( 4 )
bbcode_enabled = true
bbcode_text = "[center]Select your level:"
text = "Select your level:"

[node name="Label" type="Label" parent="VBoxContainer/PanelContainer1/HBoxContainer/VBoxContainer/VBoxContainer/Panel/VBoxContainer"]
margin_top = 64.0
margin_right = 500.0
margin_bottom = 106.0
size_flags_vertical = 3

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/PanelContainer1/HBoxContainer/VBoxContainer/VBoxContainer/Panel/VBoxContainer"]
margin_top = 110.0
margin_right = 500.0
margin_bottom = 168.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Label" type="Label" parent="VBoxContainer/PanelContainer1/HBoxContainer/VBoxContainer/VBoxContainer/Panel/VBoxContainer/HBoxContainer"]
margin_top = 22.0
margin_right = 44.0
margin_bottom = 36.0
size_flags_horizontal = 3

[node name="cbEasy" type="CheckBox" parent="VBoxContainer/PanelContainer1/HBoxContainer/VBoxContainer/VBoxContainer/Panel/VBoxContainer/HBoxContainer"]
margin_left = 48.0
margin_right = 223.0
margin_bottom = 58.0
rect_min_size = Vector2( 175, 0 )
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = ExtResource( 4 )
pressed = true
group = ExtResource( 2 )
text = "EASY"
align = 1

[node name="Label3" type="Label" parent="VBoxContainer/PanelContainer1/HBoxContainer/VBoxContainer/VBoxContainer/Panel/VBoxContainer/HBoxContainer"]
margin_left = 227.0
margin_top = 22.0
margin_right = 272.0
margin_bottom = 36.0
size_flags_horizontal = 3

[node name="cbHard" type="CheckBox" parent="VBoxContainer/PanelContainer1/HBoxContainer/VBoxContainer/VBoxContainer/Panel/VBoxContainer/HBoxContainer"]
margin_left = 276.0
margin_right = 451.0
margin_bottom = 58.0
rect_min_size = Vector2( 175, 0 )
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = ExtResource( 4 )
group = ExtResource( 2 )
text = "HARD"
align = 1

[node name="Label2" type="Label" parent="VBoxContainer/PanelContainer1/HBoxContainer/VBoxContainer/VBoxContainer/Panel/VBoxContainer/HBoxContainer"]
margin_left = 455.0
margin_top = 22.0
margin_right = 500.0
margin_bottom = 36.0
size_flags_horizontal = 3

[node name="Label2" type="Label" parent="VBoxContainer/PanelContainer1/HBoxContainer/VBoxContainer/VBoxContainer/Panel/VBoxContainer"]
margin_top = 172.0
margin_right = 500.0
margin_bottom = 214.0
size_flags_vertical = 7

[node name="Label3" type="Label" parent="VBoxContainer/PanelContainer1/HBoxContainer/VBoxContainer"]
margin_top = 436.0
margin_right = 500.0
margin_bottom = 536.0
rect_min_size = Vector2( 500, 100 )
size_flags_horizontal = 3
size_flags_vertical = 1

[node name="btnStart" type="Button" parent="VBoxContainer/PanelContainer1/HBoxContainer/VBoxContainer"]
margin_top = 540.0
margin_right = 500.0
margin_bottom = 640.0
rect_min_size = Vector2( 500, 100 )
custom_fonts/font = ExtResource( 4 )
text = "START GAME"

[node name="Label2" type="Label" parent="VBoxContainer/PanelContainer1/HBoxContainer/VBoxContainer"]
margin_top = 644.0
margin_right = 500.0
margin_bottom = 858.0
size_flags_horizontal = 3
size_flags_vertical = 7

[node name="Label2" type="Label" parent="VBoxContainer/PanelContainer1/HBoxContainer"]
margin_left = 1094.0
margin_right = 1680.0
margin_bottom = 858.0
size_flags_horizontal = 3
size_flags_vertical = 7

[node name="PanelContainer2" type="PanelContainer" parent="VBoxContainer"]
margin_top = 936.0
margin_right = 1680.0
margin_bottom = 1050.0

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/PanelContainer2"]
margin_left = 7.0
margin_top = 7.0
margin_right = 1673.0
margin_bottom = 107.0

[node name="Label" type="Label" parent="VBoxContainer/PanelContainer2/HBoxContainer"]
margin_right = 1446.0
margin_bottom = 100.0
size_flags_horizontal = 3
size_flags_vertical = 7

[node name="btnQuit" type="Button" parent="VBoxContainer/PanelContainer2/HBoxContainer"]
margin_left = 1450.0
margin_right = 1666.0
margin_bottom = 100.0
rect_min_size = Vector2( 200, 100 )
custom_fonts/font = ExtResource( 4 )
text = "QUIT GAME"

[connection signal="pressed" from="VBoxContainer/PanelContainer1/HBoxContainer/VBoxContainer/VBoxContainer/Panel/VBoxContainer/HBoxContainer/cbEasy" to="." method="_on_cbEasy_pressed"]
[connection signal="pressed" from="VBoxContainer/PanelContainer1/HBoxContainer/VBoxContainer/VBoxContainer/Panel/VBoxContainer/HBoxContainer/cbHard" to="." method="_on_cbHard_pressed"]
[connection signal="pressed" from="VBoxContainer/PanelContainer1/HBoxContainer/VBoxContainer/btnStart" to="." method="_on_btnStart_pressed"]
[connection signal="pressed" from="VBoxContainer/PanelContainer2/HBoxContainer/btnQuit" to="." method="_on_btnQuit_pressed"]
